--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -6,7 +6,6 @@
     width: 100%;
     height: 470px;
     position: absolute;
-    @include filter(blur(5px));
 }
 
 .container.hairdresser#content {
@@ -20,7 +19,8 @@
                 width: 14em;
                 border-radius: 100%;
                 margin: 0 auto 20px;
-                border: 10px solid $bg2;
+                border: 10px solid;
+                border-color: rgba(240, 240, 241, 0.5);
         }
         div.pro-label {
             background-color: $hairfie;
@@ -32,7 +32,7 @@
             padding-right: 5px;
             position: absolute;
             top: 25%;
-            right: calc(50% - 70px);
+            right: calc(50% - 100px);
         }
         .short-info {
             margin-top: 10px;
@@ -40,6 +40,9 @@
                 margin-top: 100px;
             }
             overflow: auto;
+            h1, h2 {
+                color: white;
+            }
         }
         section.hairdresser-content {
             h5 {
