--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -4,7 +4,7 @@
     background-position: 50% 50%;
     background-color: #838B95;
     width: 100%;
-    height: 470px;
+    max-height: 470px;
     position: absolute;
 }
 
