--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -76,6 +76,9 @@
                     width: 100%;
                     max-width: 250px;
                 }
+                h3 {
+                    margin-left: 15px;
+                }
                 margin-bottom: 20px;
                 padding-left: 50px;
                 padding-right: 50px;
