--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -93,6 +93,7 @@
                 }
                 position: relative;
                 background: white;
+                top: 0;
             }
         }
     }
