--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1178,8 +1178,9 @@ h1, h2, h3, h4, h5, h6,
 h1, .h1,
 h2, .h2,
 h3, .h3 {
-  margin-top: 20px;
-  margin-bottom: 10px; }
+  margin-top: 0px;
+  margin-bottom: 10px;
+  }
   h1 small,
   h1 .small, .h1 small,
   .h1 .small,
