WIP display Timetable

--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -43,6 +43,11 @@
 			width: 100%;
   			padding-top: 16px;
 
+  			div.timetable {
+  				position: relative;
+  				left: 100%;
+  				top: -25px;
+  			}
 			.row {
 				background-color: white;
 				padding-left: 35px;
