--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11781,6 +11781,10 @@ section.home-footer .row > div {
     background-color: white;
     width: 100%;
     padding-top: 16px; }
+    .salon#content .main-content section.salon-info div.timetable {
+      position: relative;
+      left: 100%;
+      top: -25px; }
     .salon#content .main-content section.salon-info .row {
       background-color: white;
       padding-left: 35px; }
