--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -44,9 +44,7 @@
   			padding-top: 16px;
 
   			div.timetable {
-  				position: relative;
-  				left: 100%;
-  				top: -25px;
+  				font-size: small;
   			}
 			.row {
 				background-color: white;
