--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11782,7 +11782,15 @@ section.home-footer .row > div {
     width: 100%;
     padding-top: 16px; }
     .salon#content .main-content section.salon-info div.timetable {
-      font-size: small; }
+      font-size: small;
+      margin-top: 15px; }
+      .salon#content .main-content section.salon-info div.timetable span {
+        padding: 0; }
+      .salon#content .main-content section.salon-info div.timetable span.extra-small {
+        color: orange; }
+        @media screen and (max-width: 480px) {
+          .salon#content .main-content section.salon-info div.timetable span.extra-small {
+            width: 20%; } }
     .salon#content .main-content section.salon-info .row {
       background-color: white;
       padding-left: 35px; }
