--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -57,7 +57,7 @@
 				margin-left: -5px;
 			}
 		}
-		.btn-red {
+		.btn-red, .btn-book {
 			height: 58px;
 			font-size: 1.4em;
 			text-align: center;
