--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -20,3 +20,6 @@ $latoLight: 300; $latoBold: 700;
 $facebook-bg: #6686D0;
 $twitter-bg: #14C4F8;
 $hairfie: #fe5b5f;
+$book: #00B0B9;
+$book-darker: #007d83;
+$book-lighter: #04C0CA;
