--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -217,6 +217,23 @@ ul {
 		-webkit-appearance: textfield;
 		-moz-appearance: textfield;
 	}
+	.Select {
+		.Select-control {
+			background-color: white;
+		}
+		.Select-placeholder {
+
+		}
+		.Select-Input {
+
+		}
+		.Select-arrow-zone {
+
+		}
+		.select-arrow {
+
+		}
+	}
 }
 // Search bar home specific style
 .main-searchbar {
