--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -53,6 +53,7 @@ body {
 @import "partials/page-resa";
 @import "partials/page-user";
 @import "partials/page-hairdresser";
+@import "partials/select";
 
 //Bastien CSS work
 @import "partials/auth-form";
