--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -239,6 +239,22 @@ ul {
 			}
 		}
 	}
+	.homeSearch .Select {
+		.Select-control {
+			min-height: 60px;
+		}
+		.Select-placeholder {
+			top: 10px;
+			font-size: 1.5em;
+		}
+		.Select-arrow {
+			top: 30px;
+		}
+	}
+	.Select-menu-outer {
+		position: absolute;
+		z-index: 10000;
+	}
 }
 // Search bar home specific style
 .main-searchbar {
