--- a/public/scss/partials/_select.scss
+++ b/public/scss/partials/_select.scss
@@ -5,14 +5,23 @@
   position: relative;
   overflow: hidden;
   background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border-color: #d9d9d9 #cccccc #b3b3b3;
-  border-radius: 4px;
+  //border: 1px solid #cccccc;
+  //border-color: #d9d9d9 #cccccc #b3b3b3;
+  //border-radius: 4px;
   box-sizing: border-box;
-  color: #333333;
+  //color: #333333;
   cursor: default;
   outline: none;
   padding: 8px 52px 8px 10px;
+    background-color: white;
+    border: 2px solid #e6e6e6;
+    font-family: $font-second;
+    font-weight: $latoBold;
+    font-size: 1.4em; letter-spacing: 2px;
+    color: $grey;
+    &:focus {
+      outline:0;
+    }
 }
 .Select-control:hover {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
@@ -24,7 +33,7 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   background: #ffffff;
-  border-color: #b3b3b3 #cccccc #d9d9d9;
+  //border-color: #b3b3b3 #cccccc #d9d9d9;
 }
 .is-open > .Select-control > .Select-arrow {
   border-color: transparent transparent #999999;
@@ -34,8 +43,8 @@
   cursor: text;
 }
 .is-focused:not(.is-open) > .Select-control {
-  border-color: #0088cc #0099e6 #0099e6;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 5px -1px rgba(0, 136, 204, 0.5);
+  //border-color: #0088cc #0099e6 #0099e6;
+  //box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 5px -1px rgba(0, 136, 204, 0.5);
 }
 .Select-placeholder {
   color: #aaaaaa;
