--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13116,6 +13116,8 @@ section.home-footer .row > div {
 
 .Select {
   position: relative; }
+  .Select:focus {
+    outline: 0; }
 
 .Select-control {
   position: relative;
@@ -13272,7 +13274,7 @@ section.home-footer .row > div {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
   margin-top: -1px;
-  max-height: 200px;
+  max-height: 400px;
   position: absolute;
   top: 100%;
   width: 100%;
@@ -13326,7 +13328,7 @@ section.home-footer .row > div {
   border: 1px solid #c9e6f2;
   color: #0088cc;
   display: inline-block;
-  font-size: 1em;
+  font-size: 1.4em;
   margin: 2px; }
 
 .Select-item-icon,
