--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -255,7 +255,20 @@ header:not(.white) {
 				font-size: 1.6em;
 				text-transform: uppercase;
 			}
+			.mobile-categories {
+				padding: 0;
+				select {
+					width: 100%;
+					background-color: white;
+					height: 65px;
+					border: 2px solid #e6e6e6;
+					font-family: "Lato", sans-serif;
+					font-weight: 700;
+					font-size: 1.4em;
+					letter-spacing: 2px;
+					color: #c4c4c4;
+				}
+			}
 		}
-
 	}
 }
