--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13274,7 +13274,7 @@ section.home-footer .row > div {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
   margin-top: -1px;
-  max-height: 400px;
+  height: 400px;
   position: absolute;
   top: 100%;
   width: 100%;
@@ -13282,7 +13282,6 @@ section.home-footer .row > div {
   -webkit-overflow-scrolling: touch; }
 
 .Select-menu {
-  max-height: 198px;
   overflow-y: auto; }
 
 .Select-option {
@@ -13290,7 +13289,13 @@ section.home-footer .row > div {
   color: #666666;
   cursor: pointer;
   display: block;
-  padding: 8px 10px; }
+  padding: 8px 10px;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 1.2em;
+  letter-spacing: 2px;
+  color: #c4c4c4;
+  text-align: left; }
 
 .Select-option:last-child {
   border-bottom-right-radius: 4px;
