--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -6,10 +6,10 @@ header .logo {
     background-size: 110px 36px !important;
 }
 
-figcaption a span {
-    font-size: 21px !important;
-    font-weight: 400;
-}
+// figcaption a span {
+//     font-size: 21px !important;
+//     font-weight: 400;
+// }
 
 figcaption a {
     font-size: 16px !important;
