--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9632,10 +9632,6 @@ body {
 header .logo {
   background-size: 110px 36px !important; }
 
-figcaption a span {
-  font-size: 21px !important;
-  font-weight: 400; }
-
 figcaption a {
   font-size: 16px !important;
   font-weight: 600; }
@@ -11260,13 +11256,11 @@ section.home-section {
       text-transform: uppercase;
       letter-spacing: 2px;
       font-weight: 600;
-      width: 40%;
+      width: 100%;
       height: 2.8em;
       top: 50%;
-      left: 50%;
       position: absolute;
-      margin-top: -1.4em;
-      margin-left: -20%; }
+      margin-top: -1.4em; }
       #home section.categories figcaption a span.oneline {
         margin-top: -0.8em; }
 
@@ -11280,11 +11274,11 @@ section.home-section {
   #home section.categories .row > div {
     margin: 10px 0px; } }
 
-#home section.categories .row .col-sm-4 {
+#home section.categories .row .col-sm-3 {
   padding: 0;
   padding-right: 15px; }
   @media screen and (max-width: 768px) {
-    #home section.categories .row .col-sm-4:nth-child(3) {
+    #home section.categories .row .col-sm-3:nth-child(4) {
       padding-right: 15px !important; } }
 
 #home section.deals .row > div:first-child {
@@ -11341,6 +11335,8 @@ section.home-section {
       font-weight: 600;
       line-height: 1.4;
       margin-top: 5px; }
+    #home section.deals figure figcaption span {
+      font-size: 20px; }
     #home section.deals figure figcaption a:first-child, #home section.deals figure figcaption a:nth-child(2) {
       display: block;
       letter-spacing: 2px; }
