--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -160,11 +160,14 @@ section.home-section {
 				letter-spacing: 2px;
 				font-weight: $semiBold;
 
-				width: 40%;height: 2.8em;
-				top: 50%;left: 50%;
+				width: 100%;
+				height: 2.8em;
+				top: 50%;
+				//left: 50%;
 				position: absolute;
+				//margin-top: -0.8em;
 				margin-top: -1.4em;
-				margin-left: -20%;
+				//margin-left: -20%;
 				&.oneline {
 					margin-top: -0.8em;
 				}
@@ -183,10 +186,10 @@ section.home-section {
 				margin: 10px 0px;
 			}
 		}
-		.col-sm-4 {
+		.col-sm-3 {
 			padding: 0;
 			padding-right: 15px;
-			&:nth-child(3) {
+			&:nth-child(4) {
 				@media screen and (max-width: $screen-sm-min) {
 					padding-right: 15px !important;
 				}
@@ -256,6 +259,9 @@ section.home-section {
 				font-weight: $semiBold;
 				line-height: 1.4;
 				margin-top: 5px;
+			}
+			span {
+				font-size: 20px;
 			}
 			a:first-child, a:nth-child(2) {
 				display: block;
