--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -36,36 +36,6 @@
 	    	padding: 0 10%;
 	    }
 	}
-	.main-searchbar {
-		padding: 20px;
-		margin: 90px 15px 60px 15px;
-		height: 100px;
-		border-radius:3px;
-		> div {
-			padding-left: 0;
-			&:nth-child(2) {
-				padding-right: 0;
-			}
-		}
-		input {
-			height: 60px;line-height: 60px;
-			margin-right: 0px; margin-left: -5px;
-			&:first-child {
-				margin-right: 10px;
-			}
-			&:nth-child(2) {
-				margin-left: -5px;
-			}
-		}
-		.btn-red, .btn-book {
-			height: 58px;
-			font-size: 1.4em;
-			text-align: center;
-			padding: 0; margin-top: 1px;
-			margin-left: -5px;
-			line-height: 60px;
-		}
-	}
 }
 section.home-section {
 	margin: 0 15px;
@@ -129,6 +99,42 @@ section.home-section {
 		display: block;
 		margin: 40px auto 0;
 		@include nofloat;
+	}
+}
+
+.choice {
+	margin-top: 90px;
+	
+}
+
+.landing .main-searchbar, .home-search .main-searchbar {
+	padding: 20px;
+	margin: 90px 15px 60px 15px;
+	height: 100px;
+	border-radius:3px;
+	> div {
+		padding-left: 0;
+		&:nth-child(2) {
+			padding-right: 0;
+		}
+	}
+	input {
+		height: 60px;line-height: 60px;
+		margin-right: 0px; margin-left: -5px;
+		&:first-child {
+			margin-right: 10px;
+		}
+		&:nth-child(2) {
+			margin-left: -5px;
+		}
+	}
+	.btn-red, .btn-book {
+		height: 58px;
+		font-size: 1.4em;
+		text-align: center;
+		padding: 0; margin-top: 1px;
+		margin-left: -5px;
+		line-height: 60px;
 	}
 }
 // Overrides:
