fix #236 et horaires SEO friendly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9761,6 +9761,11 @@ div#app {
 .socicon {
   font-family: 'socicon'; }
 
+.seo-hide {
+  position: absolute;
+  top: -9999px;
+  left: -9999px; }
+
 /*////////////////////////////////
    B U T T O N S  &  I N P U T
 ////////////////////////////////*/
