--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10105,6 +10105,9 @@ h1 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 4.2em; }
+  @media screen and (max-width: 991px) {
+    h1 {
+      font-size: 3.2em; } }
 
 h2 {
   font-family: "Lato", sans-serif;
@@ -11114,13 +11117,15 @@ footer.mobile {
 	   P A G E  H O M E
 ////////////////////////////////*/
 .landing {
-  height: 610px;
   width: 100vw;
   max-width: 100%;
   background: url(../images/bg-landing.jpg) no-repeat top center;
   background-size: cover;
   text-align: center;
   position: relative; }
+  @media screen and (min-width: 767px) {
+    .landing {
+      height: 500px; } }
   .landing h1, .landing p {
     width: 100%;
     color: white; }
@@ -11132,15 +11137,32 @@ footer.mobile {
     font-size: 1.6em;
     font-weight: 400; }
   .landing .headline {
-    margin: 140px auto 0;
+    margin: 100px auto 0;
     height: 132px;
     float: none !important; }
     @media screen and (max-width: 767px) {
       .landing .headline h1 {
-        margin-top: 200px; } }
+        margin-top: 150px; } }
     .landing .headline p {
       letter-spacing: 1.34px;
       padding: 0 10%; }
+      @media screen and (max-width: 767px) {
+        .landing .headline p {
+          display: none; } }
+  .landing .btn-red {
+    height: 58px;
+    font-size: 1.4em;
+    text-align: center;
+    padding: 0;
+    margin: 10px;
+    line-height: 30px;
+    text-transform: uppercase;
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    border-radius: 0;
+    padding: 16px 30px;
+    border-radius: 0 !important;
+    letter-spacing: 2px; }
 
 section.home-section {
   margin: 0 15px;
@@ -11238,6 +11260,9 @@ section.home-section {
     margin-top: 1px;
     margin-left: -5px;
     line-height: 60px; }
+
+#home section.home-search .main-searchbar {
+  margin: 0; }
 
 #home section.categories figure:hover {
   -webkit-transition: all 0.25s ease-out;
@@ -11463,10 +11488,10 @@ section.home-section {
   #home section.hairfies figure:hover figcaption {
     opacity: 1; }
 
-#home section:nth-child(even) {
+#home section:nth-child(odd) {
   background-color: #f0f0f1;
   position: relative; }
-  #home section:nth-child(even):before {
+  #home section:nth-child(odd):before {
     content: " ";
     width: 200vw;
     height: 100%;
@@ -11475,7 +11500,7 @@ section.home-section {
     top: 0;
     background: #f0f0f1;
     z-index: -1; }
-  #home section:nth-child(even):after {
+  #home section:nth-child(odd):after {
     content: " ";
     width: 200vw;
     height: 100%;
