--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -27,6 +27,10 @@ h1 {
 	font-family: $font-second;
 	font-weight: $latoBold;
 	font-size: 4.2em; // 42px
+
+	@media screen and(max-width: $screen-sm-max) {
+		font-size: 3.2em;
+	}
 }
 h2 {
 	font-family: $font-second;
