--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -3,7 +3,10 @@
 ////////////////////////////////*/
 
 .landing {
-	height: 610px; width: 100vw;
+	width: 100vw;
+	@media screen and (min-width: $screen-xs-max) {
+		height: 500px;
+	}
 	max-width: 100%; // fix-mobile horizontal scroll
 	background: url(../images/bg-landing.jpg) no-repeat top center;
 	background-size: cover;
@@ -23,18 +26,37 @@
 		font-weight: $regular;
 	}
 	.headline {
-	    margin: 140px auto 0;
+	    margin: 100px auto 0;
 	    height: 132px;
 	    @include nofloat;
 	    h1 {
 	    	@media screen and (max-width: $screen-xs-max) {
-	    		margin-top: 200px;
+	    		margin-top: 150px;
 	    	}
 	    }
 	    p {
 	    	letter-spacing: 1.34px;
 	    	padding: 0 10%;
+	    	@media screen and (max-width: $screen-xs-max) {
+	    		display: none;
+	    	}
 	    }
+	}
+
+	.btn-red {
+		height: 58px;
+		font-size: 1.4em;
+		text-align: center;
+		padding: 0; 
+		margin: 10px;
+		line-height: 30px;
+		text-transform: uppercase;
+		font-family: $font-second;
+		font-weight: $latoBold;
+		border-radius:0;
+		padding: 16px 30px;
+		border-radius: 0 !important;
+		letter-spacing: 2px;
 	}
 }
 section.home-section {
@@ -137,7 +159,12 @@ section.home-section {
 		line-height: 60px;
 	}
 }
-// Overrides:
+
+#home section.home-search {
+	.main-searchbar {
+		margin: 0;
+	}
+}
 
 #home section.categories {
 	figure {
@@ -453,7 +480,7 @@ section.home-section {
 		}
 	}
 }
-#home section:nth-child(even) {
+#home section:nth-child(odd) {
 	background-color: $bg2;
 	@include fullWidthBg($bg2);
 }
